# Masonry

src/: CMakeLists.txt  main.cpp  mainWindow.cpp  mainWindow.h  masonry.cpp  masonry.h  masonryWidget.cpp  masonryWidget.h
src/elemUI/: masonryItem.cpp  masonryItem.h  masonryWidget.cpp  masonryWidget.h
src/lib/: container.cpp  container.h  item.cpp  item.h
